--- a/layers/core-v1/tailwind/components/elements/form-group.css
+++ b/layers/core-v1/tailwind/components/elements/form-group.css
@@ -1,5 +1,5 @@
 @layer components {
     .form-group {
-        @apply flex gap-y-3 mb-4
+        @apply flex gap-y-1 mb-4
     }
 }
