--- a/layers/core-v1/tailwind/components/elements/input.scss
+++ b/layers/core-v1/tailwind/components/elements/input.scss
@@ -1,6 +1,6 @@
 @layer components {
   .input-primary {
-    @apply w-full rounded-sm border p-3 text-sm font-light
+    @apply w-full rounded-sm border p-2 text-sm font-light
   }
 
   .input {
@@ -8,7 +8,7 @@
   }
 
   .input-help {
-    @apply py-2 transition text-sm flex items-center content-center gap-1
+    @apply py-1 transition text-sm flex items-center content-center gap-1
   }
 
   .input-error {
